change main.html to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--Header Section-->
         <header>
             <div class="desktop content">
-                <a href="#main.html" id="name-logo"><img src="./resources/images/Personal Logo edited.png" alt="Personal logo"></a>
+                <a href="#index.html" id="name-logo"><img src="./resources/images/Personal Logo edited.png" alt="Personal logo"></a>
                 <nav>
                     <ul>
                         <li><a href="#about-section">About</a></li>
